--- a/shop-women.html
+++ b/shop-women.html
@@ -70,9 +70,9 @@
               </select>
               <select name="prices" id="prices" class="dropdown">
                 <option value="prices">Prices</option>
-                <option value="$0-$100">$0-$100</option>
-                <option value="$100-$200">$100-$200</option>
-                <option value="over-$200">Over $200</option>
+                <option value="minPrice">$0-$100</option>
+                <option value="midPrice">$100-$200</option>
+                <option value="maxPrice">Over $200</option>
               </select>
               <input
                 type="submit"
