number of products update

--- a/shop-men.html
+++ b/shop-men.html
@@ -84,26 +84,20 @@
           </form>
         </section>
         <div class="product-filter">
-          <form>
-            <div>
-              <label for="number">Show number of products</label>
-              <select name="number" id="number">
-                <option value="4">4</option>
-                <option value="10">10</option>
-                <option value="25">25</option>
-              </select>
-            </div>
-          </form>
-          <form>
-            <div>
-              <label for="popular">Sort by</label>
-              <select name="popular" id="popular">
-                <option value="popular">Popular</option>
-                <option value="lowest">Lowest price</option>
-                <option value="highest">Highest price</option>
-              </select>
-            </div>
-          </form>
+          <div class="product__Number">
+          </div>
+          <div class="filter__popular">
+            <form>
+              <div>
+                <label for="popular">Sort by</label>
+                <select name="popular" id="popular">
+                  <option value="popular">Popular</option>
+                  <option value="lowest">Lowest price</option>
+                  <option value="highest">Highest price</option>
+                </select>
+              </div>
+            </form>
+          </div>
         </div>
         <section class="popular-section">
           <div class="popular-products shop-section"></div>
