--- a/shop-men.html
+++ b/shop-men.html
@@ -70,9 +70,9 @@
               </select>
               <select name="prices" id="prices" class="dropdown">
                 <option value="prices">Prices</option>
-                <option value="minPrice">$0-$100</option>
-                <option value="midPrice">$100-$200</option>
-                <option value="maxPrice">Over $200</option>
+                <option value="minPrice">0-1000 NOK</option>
+                <option value="midPrice">1000-2000 NOK</option>
+                <option value="maxPrice">Over 2000 NOK</option>
               </select>
               <input
                 type="submit"
