--- a/products/product.html
+++ b/products/product.html
@@ -75,9 +75,12 @@
               <div class="product__cta">
                 <div class="cart-btn">
                 </div>
-                <a href="../favorites.html" class="cta-heart product-heart"
-                  ><i class="far fa-heart heart-icon"></i
-                ></a>
+                <div class="cta-heart product-heart">
+                  <i class="far fa-heart heart-icon"></i>
+                </div>
+                <!--<a href="../favorites.html" class="cta-heart product-heart">
+                  <i class="far fa-heart heart-icon"></i>
+                </a>-->
               </div>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
