--- a/products/product.html
+++ b/products/product.html
@@ -65,22 +65,20 @@
                 <div><i class="fas fa-circle fa-3x red"></i></div>
                 <div><i class="fas fa-circle fa-3x blue"></i></div>
               </div>
-              <select name="size" id="size" class="dropdown">
+              <select name="size" id="productSize" class="dropdown">
                 <option value="size">Size</option>
-                <option value="x-small">X-small</option>
-                <option value="small">Small</option>
-                <option value="medium">Medium</option>
-                <option value="Large">Large</option>
+                <option value="XS">X-small</option>
+                <option value="S">Small</option>
+                <option value="M">Medium</option>
+                <option value="L">Large</option>
               </select>
+              <div class="productSize__style">Please choose a size</div>
               <div class="product__cta">
                 <div class="cart-btn">
                 </div>
                 <div class="cta-heart product-heart">
                   <i class="far fa-heart heart-icon"></i>
                 </div>
-                <!--<a href="../favorites.html" class="cta-heart product-heart">
-                  <i class="far fa-heart heart-icon"></i>
-                </a>-->
               </div>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
