--- a/index.html
+++ b/index.html
@@ -117,6 +117,6 @@
         <i class="fab fa-youtube"></i>
       </div>
     </footer>
-    <script src="js/products.js" type="module"></script>
+    <script src="js/index.js" type="module"></script>
   </body>
 </html>
