--- a/products/product.html
+++ b/products/product.html
@@ -9,22 +9,12 @@
     <link href="../css/styles.css" rel="stylesheet" />
     <link href="../css/product.css" rel="stylesheet" />
     <link href="../css/media.css" rel="stylesheet" />
-    <script
-      src="https://kit.fontawesome.com/b9235904b4.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/b9235904b4.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <header>
-      <a href="../index.html"
-        ><img
-          src="../images/RainyDays_Logo.png"
-          class="logo"
-          alt="RainyDays's logo"
-      /></a>
-      <label for="hamburger-menu"
-        ><i class="fas fa-bars" id="hamburger-icon"></i
-      ></label>
+      <a href="../index.html"><img src="../images/RainyDays_Logo.png" class="logo" alt="RainyDays's logo" /></a>
+      <label for="hamburger-menu"><i class="fas fa-bars" id="hamburger-icon"></i></label>
       <input type="checkbox" id="hamburger-menu" />
       <nav>
         <ul>
@@ -39,9 +29,7 @@
         </div>
         <div class="icon-wrapper">
           <a href="../login.html"><i class="far fa-user icon"></i></a>
-          <a href="../shopping-bag.html"
-            ><i class="fas fa-shopping-cart icon"></i
-          ></a>
+          <a href="../shopping-bag.html"><i class="fas fa-shopping-cart icon"></i></a>
         </div>
       </nav>
     </header>
@@ -57,38 +45,18 @@
           <section class="seasonal-autumn">
             <div>
               <div class="product-specification"></div>
-              <h3>Colors</h3>
-              <div class="circles">
-                <div><i class="fas fa-circle fa-3x yellow"></i></div>
-                <div><i class="fas fa-circle fa-3x"></i></div>
-                <div><i class="fas fa-circle fa-3x red"></i></div>
-                <div><i class="fas fa-circle fa-3x blue"></i></div>
-              </div>
               <select name="size" id="productSize" class="dropdown">
                 <option value="size">Size</option>
-                <option value="XS">X-small</option>
-                <option value="S">Small</option>
-                <option value="M">Medium</option>
-                <option value="L">Large</option>
               </select>
               <div class="productSize__style">Please choose a size</div>
               <div class="product__cta">
-                <div class="cart-btn">
-                </div>
+                <div class="cart-btn"></div>
               </div>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                Phasellus vitae turpis dictum, fermentum ligula vitae,
-                scelerisque sem. Nunc aliquam, neque non dignissim pulvinar,
-                justo augue placerat lacus, vitae vehicula velit arcu a velit.
-                Quisque semper rhonc
-              </p>
             </div>
           </section>
         </div>
       </div>
-      <section class="cart-wrapper">
-      </section>
+      <section class="cart-wrapper"></section>
     </main>
     <footer>
       <div class="footer__content">
