--- a/shopping-bag.html
+++ b/shopping-bag.html
@@ -9,22 +9,12 @@
     <link href="css/styles.css" rel="stylesheet" />
     <link href="css/shopping-bag.css" rel="stylesheet" />
     <link href="css/media.css" rel="stylesheet" />
-    <script
-      src="https://kit.fontawesome.com/b9235904b4.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/b9235904b4.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <header>
-      <a href="index.html"
-        ><img
-          src="images/RainyDays_Logo.png"
-          class="logo"
-          alt="RainyDays's logo"
-      /></a>
-      <label for="hamburger-menu"
-        ><i class="fas fa-bars" id="hamburger-icon"></i
-      ></label>
+      <a href="index.html"><img src="images/RainyDays_Logo.png" class="logo" alt="RainyDays's logo" /></a>
+      <label for="hamburger-menu"><i class="fas fa-bars" id="hamburger-icon"></i></label>
       <input type="checkbox" id="hamburger-menu" />
       <nav>
         <ul>
@@ -39,9 +29,7 @@
         </div>
         <div class="icon-wrapper">
           <a href="login.html"><i class="far fa-user icon"></i></a>
-          <a href="shopping-bag.html"
-            ><i class="fas fa-shopping-cart icon"></i
-          ></a>
+          <a href="shopping-bag.html"><i class="fas fa-shopping-cart icon"></i></a>
         </div>
       </nav>
     </header>
@@ -50,10 +38,8 @@
         <h1>Your shopping bag</h1>
         <h2>Products</h2>
         <div class="total-products"></div>
-        <div class="product__wrapper">
-        </div>
-        <section class="summmary__section">
-        </section>
+        <div class="product__wrapper"></div>
+        <section class="summmary__section"></section>
       </div>
     </main>
     <footer>
