--- a/shop-women.html
+++ b/shop-women.html
@@ -9,22 +9,12 @@
     <link href="css/styles.css" rel="stylesheet" />
     <link href="css/shop.css" rel="stylesheet" />
     <link href="css/media.css" rel="stylesheet" />
-    <script
-      src="https://kit.fontawesome.com/b9235904b4.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/b9235904b4.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <header>
-      <a href="index.html"
-        ><img
-          src="images/RainyDays_Logo.png"
-          class="logo"
-          alt="RainyDays's logo"
-      /></a>
-      <label for="hamburger-menu"
-        ><i class="fas fa-bars" id="hamburger-icon"></i
-      ></label>
+      <a href="index.html"><img src="images/RainyDays_Logo.png" class="logo" alt="RainyDays's logo" /></a>
+      <label for="hamburger-menu"><i class="fas fa-bars" id="hamburger-icon"></i></label>
       <input type="checkbox" id="hamburger-menu" />
       <nav>
         <ul>
@@ -39,9 +29,7 @@
         </div>
         <div class="icon-wrapper">
           <a href="login.html"><i class="far fa-user icon"></i></a>
-          <a href="shopping-bag.html"
-            ><i class="fas fa-shopping-cart icon"></i
-          ></a>
+          <a href="shopping-bag.html"><i class="fas fa-shopping-cart icon"></i></a>
         </div>
       </nav>
     </header>
@@ -59,45 +47,12 @@
                 <option value="S">S</option>
                 <option value="M">M</option>
                 <option value="L">L</option>
+                <option value="XL">XL</option>
               </select>
-              <select name="color" id="color" class="dropdown">
-                <option value="Color">Color</option>
-                <option value="Black">Black</option>
-                <option value="Blue">Blue</option>
-                <option value="Green">Green</option>
-                <option value="Orange">Orange</option>
-              </select>
-              <select name="prices" id="prices" class="dropdown">
-                <option value="prices">Prices</option>
-                <option value="minPrice">0-1000 NOK</option>
-                <option value="midPrice">1000-2000 NOK</option>
-                <option value="maxPrice">Over 2000 NOK</option>
-              </select>
-              <input
-                type="submit"
-                name="save-changes"
-                value="Save changes"
-                class="cta-green"
-              />
+              <input type="submit" name="save-changes" value="Save changes" class="cta-green" />
             </div>
           </form>
         </section>
-        <div class="product-filter">
-          <div class="product__Number">
-          </div>
-          <div class="filter__popular">
-            <form>
-              <div>
-                <label for="popular">Sort by</label>
-                <select name="popular" id="popular">
-                  <option value="lowest">Lowest price</option>
-                  <option value="highest">Highest price</option>
-                  <option value="popular">Popular</option>
-                </select>
-              </div>
-            </form>
-          </div>
-        </div>
         <section class="popular-section">
           <div class="popular-products shop-section"></div>
         </section>
@@ -116,6 +71,6 @@
         <i class="fab fa-youtube"></i>
       </div>
     </footer>
-    <script src="js/products.js" type="module"></script>
+    <script src="js/shop2.js" type="module"></script>
   </body>
 </html>
