--- a/index.html
+++ b/index.html
@@ -46,15 +46,17 @@
     </header>
     <main>
       <section class="welcome">
+      </section>
+      <section>
         <div class="welcome__content">
           <h1>Pushing the Comfort Zone</h1>
+          <div class="welcome-line"></div>
           <p>
             Comfortable high quality rain jackets suitable to all outdoor
             activities.
           </p>
-          <a href="shop-men.html" class="cta">Shop</a>
+          <a href="shop-men.html" class="cta welcome-btn">Shop</a>
         </div>
-        <div class="welcome__img"></div>
       </section>
       <section class="service">
         <div class="service__info">
