--- a/shop-men.html
+++ b/shop-men.html
@@ -71,6 +71,7 @@
         <i class="fab fa-youtube"></i>
       </div>
     </footer>
+    <script src="js/functions.js"></script>
     <script src="js/shop.js" type="module"></script>
   </body>
 </html>
