--- a/products/product.html
+++ b/products/product.html
@@ -71,6 +71,7 @@
         <i class="fab fa-youtube"></i>
       </div>
     </footer>
+    <script src="../js/functions.js"></script>
     <script src="../js/productDetails.js" type="module"></script>
   </body>
 </html>
