--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-- @format -->
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Rainydays | Home</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -45,8 +45,7 @@
       </nav>
     </header>
     <main>
-      <section class="welcome">
-      </section>
+      <div class="welcome"></div>
       <section>
         <div class="welcome__content">
           <h1>Pushing the Comfort Zone</h1>
