--- a/checkout-success.html
+++ b/checkout-success.html
@@ -1,6 +1,6 @@
 <!-- @format -->
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Rainydays | Checkout success</title>
     <meta charset="UTF-8" />
