--- a/contact-us.html
+++ b/contact-us.html
@@ -1,6 +1,6 @@
 <!-- @format -->
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Rainydays | Contact us</title>
     <meta charset="UTF-8" />
