--- a/login.html
+++ b/login.html
@@ -1,6 +1,6 @@
 <!-- @format -->
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Rainydays | Login</title>
     <meta charset="UTF-8" />
