--- a/products/product.html
+++ b/products/product.html
@@ -1,6 +1,6 @@
 <!-- @format -->
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Rainydays | Product description</title>
     <meta charset="UTF-8" />
