--- a/shop-women.html
+++ b/shop-women.html
@@ -1,6 +1,6 @@
 <!-- @format -->
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Rainydays | Shop-women</title>
     <meta charset="UTF-8" />
